Fixed wrong styling of scrollpane when using "transparent". Fixed values for "visibility" attributes.

--- a/gemsfx/src/main/resources/com/dlsc/gemsfx/infocenter/info-center-view.css
+++ b/gemsfx/src/main/resources/com/dlsc/gemsfx/infocenter/info-center-view.css
@@ -21,7 +21,6 @@
 }
 
 .info-center-view > .main-pane > .top-level-container .scroll-pane {
-    -fx-background-color: transparent;
     -fx-border-width: 0px;
 }
 
@@ -236,7 +235,7 @@
 }
 
 .info-center-view .notification-view > .content > .close-icon-wrapper > .label {
-    visibility: false;
+    visibility: hidden;
 }
 
 .info-center-view .notification-view > .content > .close-icon-wrapper.stack:hover {
@@ -249,11 +248,11 @@
 }
 
 .info-center-view .notification-view > .content > .close-icon-wrapper.stack:hover > .label {
-    visibility: true;
+    visibility: visible;
 }
 
 .info-center-view .notification-view > .content > .close-icon-wrapper.stack:hover > .ikonli-font-icon {
-    visibility: false;
+    visibility: hidden;
 }
 
 .info-center-view .notification-view > .content {
